# cpp_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  conanfile.py  vcpkg-configuration.json  vcpkg.json
app/: main.cpp  main.h
docs/: Doxyfile  header.html
libs/: Animal.h
tests/: CMakeLists.txt
